Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.0
-
None
Description
Currently, we warn when decimal operations overflow. We should make sure we have all such overflow checks in place, and also have a mode where these warnings can be promoted to errors (perhaps when decimal_v2=true).
Attachments
Attachments
Issue Links
- blocks
-
IMPALA-4924 Make DECIMAL_V2 the default mode
-
- Resolved
-
- breaks
-
IMPALA-6284 Exhaustive release build failing
-
- Resolved
-